Fixed minor alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,20 @@ header.jumbotron {
     margin-top: -25%;
 }
 
+@media (min-width: 540px) { 
+
+    section.container {
+        margin-left: -15px;
+        margin-right: -15px;
+        
+    }
+
+    section.container > .row {
+        margin-right: -45px;
+    }
+
+}
+
 footer {
     background-color: #f5f5f5;
     margin-top: 30px;
